k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
apiVersion: v1
kind: Namespace
metadata:
  name: rabbit
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: user
---
apiVersion: v1
kind: Namespace
metadata:
  name: billing
---
apiVersion: v1
kind: Namespace
metadata:
  name: order
---
apiVersion: v1
kind: Namespace
metadata:
  name: notification
