k8s/auth-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: rosignol/auth:0.0.1
          ports:
            - name: http
              containerPort: 9999
          livenessProbe:
            httpGet:
              port: 9999
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 9999
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
