k8s/billing-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing
spec:
  selector:
    app: billing
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: rosignol/billing:0.0.1
          ports:
            - name: http
              containerPort: 7777
          livenessProbe:
            httpGet:
              port: 7777
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 7777
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
