k8s/notification-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: rosignol/notification:0.0.1
          ports:
            - name: http
              containerPort: 7775
          livenessProbe:
            httpGet:
              port: 7775
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 7775
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
