k8s/order-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  selector:
    app: order
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: rosignol/order:0.0.2
          ports:
            - name: http
              containerPort: 7776
          livenessProbe:
            httpGet:
              port: 7776
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 7776
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
