k8s/user-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: user
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: rosignol/user:0.0.1
          ports:
            - name: http
              containerPort: 8888
          livenessProbe:
            httpGet:
              port: 8888
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8888
              path: /health
            initialDelaySeconds: 3
            periodSeconds: 1
            timeoutSeconds: 2
