k8s/nginx-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  namespace: user
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
          paths:
            - path: /user(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: user
                  port:
                    number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
          paths:
            - path: /auth(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: auth
                  port:
                    number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing
  namespace: billing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://arch.homework/auth/is-token-valid"
    nginx.ingress.kubernetes.io/auth-signin: "http://arch.homework/auth/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
          paths:
            - path: /billing(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: billing
                  port:
                    number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order
  namespace: order
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://arch.homework/auth/is-token-valid"
    nginx.ingress.kubernetes.io/auth-signin: "http://arch.homework/auth/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
          paths:
            - path: /order(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: order
                  port:
                    number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification
  namespace: notification
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://arch.homework/auth/is-token-valid"
    nginx.ingress.kubernetes.io/auth-signin: "http://arch.homework/auth/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
          paths:
            - path: /notification(/|$)(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: notification
                  port:
                    number: 80
